# courseworkkpz

./: .gitignore  CMakeLists.txt  README.md  main.cpp
config/: config.hpp
imguiaddons/: imguidatechooser.cpp  imguidatechooser.h
imwindows/: imwindows.cpp  imwindows.hpp
plumbing/: accident.hpp  client.hpp  connection_queue.hpp  contract.hpp  master.hpp  person.hpp  service_area.hpp
requests/: accidents_types.hpp  amount_accidents.hpp  amount_brigades.hpp  amount_masters.hpp  average_cost_repairing.hpp  earnings_masters.hpp  register_client.hpp  utils.hpp
resources/: application_icon.rc
tests/: test_common.hpp  test_connection_queue.cpp  test_service_area.cpp
